--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <div class="u-clearfix u-custom-html u-hover-feature u-custom-html-1">
           <style> body {
             font-family: Arial, sans-serif;
+			background-color: #292d33;
         }
         .container {
             margin: 0 auto;
