--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             margin: 0 auto;
             max-width: 600px;
             padding: 20px;
+	    background-color: #292d33;
         }
         .random {
             display: flex;
